--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -6,7 +6,7 @@
 
       <form
         method="post"
-        action="http://localhost:5050/listings/<%=list.id %>/?_method=patch"
+        action="/listings/<%=list.id %>/?_method=patch"
         class="needs-validation"
         novalidate
         enctype="multipart/form-data"
