--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,7 +7,7 @@
 
       <form
         method="post"
-        action="http://localhost:5050/listings"
+        action="/listings"
         class="needs-validation"
         novalidate
         enctype="multipart/form-data"
