--- a/views/show.ejs
+++ b/views/show.ejs
@@ -7,7 +7,7 @@
     </div>
     <div class="card listing-card">
       <img
-        
+        src="<%= list.image.url %>"
         class="card-img-top show-img card-shadow"
         alt="..."
       />
