--- a/views/index.ejs
+++ b/views/index.ejs
@@ -92,7 +92,7 @@
  <% for(let list of listing){ %>
   
       <div class="card col cardd listing-card" >
-        <a class="anchor" href="http://localhost:5050/listings/<%= list.id %>">
+        <a class="anchor" href="/listings/<%= list.id %>">
         <img src="<%= list.image.url %>" class="card-img-top" style="height: 20rem;" alt="..." />
         <div class="card-body">
           
